--- a/JSON_Forms_Setup/package.json
+++ b/JSON_Forms_Setup/package.json
@@ -1,8 +1,12 @@
 {
-  "name": "my_form",
+  "name": "JSON_Forms_Setup",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.14",
+    "@mui/material": "^5.10.14",
     "@rjsf/core": "^5.0.0-beta.12",
     "@rjsf/utils": "^5.0.0-beta.12",
     "@rjsf/validator-ajv8": "^5.0.0-beta.12",
