dashboard library add

--- a/Master_Framework_Setup/tsconfig.json
+++ b/Master_Framework_Setup/tsconfig.json
@@ -17,6 +17,6 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src"]                              /* Skip type checking all .d.ts files. */
+  "include": ["src"]                           
   }
 
