--- a/Master_Framework_Setup/package.json
+++ b/Master_Framework_Setup/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@vitejs/plugin-react": "^2.2.0",
-    "vite": "^3.2.3",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@jsonforms/core": "^3.0.0",
@@ -13,6 +11,8 @@
     "@jsonforms/react": "^3.0.0",
     "@mui/icons-material": "^5.10.15",
     "@mui/material": "^5.10.15",
+    "@mui/x-data-grid": "^5.17.14",
+    "@mui/x-data-grid-generator": "^5.17.14",
     "@mui/x-date-pickers": "^5.0.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -21,10 +21,13 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "@types/websocket": "^1.0.5",
+    "@vitejs/plugin-react": "^2.2.0",
     "axios": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.5",
     "typescript": "^4.9.3",
+    "vite": "^3.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
